fix alignment

--- a/src/styles/Team.css
+++ b/src/styles/Team.css
@@ -18,7 +18,7 @@
   width: 10vw;
   height: 20vh;
   border-radius: 50%;
-  margin-left: 10px;
+  margin-left: 15px;
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
 }
